--- a/WEB development/tut5.html
+++ b/WEB development/tut5.html
@@ -13,6 +13,11 @@
     <h4>Vedant</h4>
     <h5>Vedant</h5>
     <h6>Vedant</h6>
+    <h2>Vedant</h2>
+    <h3>Vedant</h3>
+    <h4>Vedant</h4>
+    <h5>Vedant</h5>
+    <h6>Vedant</h6>
     
     <p>This is Vedant</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum assumenda fugiat iste architecto temporibus provident iusto <strong>Keshav Chutiya hai sabko pata hona chaiye </strong> quia earum voluptatum. Maxime <br> sapiente ratione <em> They call it freedom i call it Bitcoin </em> earum, quae consequatur deserunt totam eum voluptatum in commodi? Id, a?</p>
