--- a/WEB development/tut27.html
+++ b/WEB development/tut27.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visibility and z-index</title>
+    <style>
+        .box{
+            width: 170px;
+            height: 170px;
+            border: 2px solid black;
+
+        }
+        #box1{
+            position: relative;
+            top: 49px;
+            background-color: green;
+            z-index: 35;
+        }
+            
+        #box2{ 
+            position: relative;
+            top: 14px;
+            /* z-index will oly work for position: relative,absolute,fixed or sticky */
+            z-index: 34;
+            /* display: none; will hide the elemennt and the space
+            /* visibility: hidden; will hide the element but will show its empty space  */
+            background-color: rgb(128, 0, 0);}
+        #box3{ background-color: rgb(0, 9, 128);}
+        #box4{ background-color: rgb(119, 128, 0);}
+
+    </style>
 </head>
 <body>
-    
+    <div class="box" id="box1"></div>
+    <div class="box" id="box2"></div>
+    <div class="box" id="box3"></div>
+    <div class="box" id="box4"></div>
 </body>
 </html>
